# noon

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  initdb.sql  wrangler.toml
benches/: blind.rs
crates/core/: Cargo.toml
crates/core/benches/: blind.rs
crates/core/src/: blind.rs  lib.rs
crates/server/: Cargo.toml  build.rs  initdb.sql
crates/server/protobufs/: forms.proto
crates/server/src/: auth.rs  email.rs  forms_db.rs  forms_routes.rs  lib.rs  lupyd_token.rs  main.rs  otp.rs  shared_data.rs  subscription_db.rs  subscription_routes.rs  utils.rs
crates/server/src/pb/: forms.rs  mod.rs
crates/server/tests/: integration_tests.rs  participant_flow_tests.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  stats.html  vite.config.ts
frontend/playwright-report/: index.html
frontend/scripts/: generate-favicons.mjs
frontend/src/: App.css  App.tsx  ThemeContext.tsx  auth.tsx  config.ts  crypto.ts  forms.json  forms.proto  index.css  main.tsx  proto.ts
frontend/src/components/: Dashboard.tsx  FormBuilder.tsx  FormResults.tsx  FormSubmission.tsx  Subscription.tsx  ThemeToggle.tsx  logo.tsx
frontend/tests/: README.md  form-builder.spec.ts  home.spec.ts  navigation.spec.ts
proto/: forms.proto
src/: blind.rs  lib.rs  main.rs  pre.rs
