[package]
name = "noon-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "noon_core"
path = "src/lib.rs"

[dependencies]
num-bigint-dig = { version = "0.8.6", features = ["rand"] }
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.8"
rsa = { version = "0.9.10", features = ["sha2"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "blind"
harness = false
