[package]
name = "noon-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bytes = "1.11.1"
deadpool-postgres = "0.14.1"
dotenv = "0.15.0"
http-body-util = "0.1.3"
httpdate = "1.0.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
lazy_static = "1.5.0"
log = "0.4.29"
quick-protobuf = "0.8.1"
rand = "0.8"
reqwest = { version = "0.13.2", features = ["json"] }
ring = "0.17.14"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tokio-postgres-rustls = "0.13.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
noon-core = { path = "../core" }
rsa = { version = "0.9.10", features = ["sha2"] }
lettre = "0.11"
native-tls = "0.2"
tokio-native-tls = "0.3"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = { version = "10.3.0", features = ["hmac", "rust_crypto"] }
regex = "1.12.3"


[build-dependencies]
pb-rs = "0.10.0"
